# papers-implemented

./: .gitignore  Readme.md  requirements.txt
kaggle/quora-question-pairs/: baselines.ipynb
moocs/coursera-nlp-specialization/course-1-classification-vector-spaces/: notes.ipynb
moocs/coursera-nlp-specialization/course-2-probabilistic-models/: notes.ipynb
moocs/coursera-nlp-specialization/course-3-sequence-models/: notes.ipynb
moocs/coursera-nlp-specialization/course-4-attention-models/: notes.ipynb  transformer_summarizer.ipynb
moocs/self/cpp/: hello.cpp
moocs/self/cpp/linearRegression/: CMakeLists.txt  main.cpp  readme.md
moocs/self/cpp/linearRegression/src/: lsr.cpp  lsr.h  main.cpp
moocs/self/golang/: .gitignore  go.mod  go.sum  main.go
moocs/self/golang/extras/: extrafile.go
moocs/self/latex/: __latexindent_temp.tex
papers/ccsum/: Untitled.ipynb  summarisation.ipynb
papers/seeded-topics/: guidedlda_hack.ipynb  sklearn.ipynb  sklearn_guided_lda.py  test.ipynb
papers/textrank/: position_rank.ipynb  summarisation.ipynb  textrank.ipynb
papers/wmd/: wmd.ipynb
textbooks/mining-of-massive-datasets/: Readme.md  finding-similar-items.ipynb  recommenders-collaborative-filtering.ipynb
workshops/aws-innovate/: notes.md
